--- a/feeds.yaml
+++ b/feeds.yaml
@@ -6,5 +6,5 @@
   url: https://feeds.bbci.co.uk/news/world/rss.xml
 - name: スポーツ
   url: https://www.espn.com/espn/rss/news
-- name: サイエンス
-  url: https://www.sciencemag.org/rss/news_current.xml
+- name: エンタメ
+  url: https://www.cinematoday.jp/rss/all_news.xml
